--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -48,8 +48,23 @@
         padding-top: var(--space150);
 
     }
-    
+     /* Không hiển thị hình ảnh other package */
+     .detail_page .page__content--otherpack {
+        display: none;
+    }
+    .detail_page .page__content--discription{
+        width: fit-content;
+    }
 
+}
+@media screen and (min-width: 1025px) {
+    /* Không hiển thị hình ảnh other package */
+    .detail_page .page__content--otherpack {
+        display: none;
+    }
+    .detail_page .page__content--discription{
+        width: fit-content;
+    }
 }
 /*máy tính bảng, hiện thị chiều ngang*/
 
@@ -103,7 +118,12 @@
         padding-top: 200px;
 
     }
+     /* Không hiển thị hình ảnh other package */
+    .detail_page .page__content--otherpack {
+        display: none;
+    }
 }
+ 
 /*máy tính bảng loại to, hiện thị chiều dọc*/
 
 @media screen and (max-width: 768px) {
