--- a/CSS/style.css
+++ b/CSS/style.css
@@ -118,216 +118,121 @@
       .tour_page .text-center {
           color: rgb(37, 37, 100);
       }
-      /*PAGE book now*/
+     /*PAGE book now*/
       
-      .book_page {
-          margin: 0;
-          padding: 0;
-      }
-      
-      .page__select {
-          padding-top: var(--space);
-          flex-wrap: wrap;
-          border-radius: 20px;
-          color: white;
-          background-color: #144496;
-          position: absolute;
-          z-index: 2;
-          height: 300px;
-          min-width: 500px;
-          left: var(--space250);
-          right: var(--space250);
-          top: var(--space200);
-      }
-      
-      .img_slidego img {
-          width: 100%;
-          height: 100%;
-          position: relative;
-          z-index: 1;
-      }
-      
-      .page__select label {
-          font-size: large;
-          padding-right: var(--space);
-      }
-      
-      .page__select__search__place {
-          padding-left: var(--space150);
-          padding-bottom: var(--space);
-      }
-      
-      .page__select__search__place input {
-          position: relative;
-          font-size: 20px;
-          box-sizing: border-box;
-          transition: .5s;
-      }
-      
-      .page__select__search__date {
-          padding-left: var(--space90);
-          padding-bottom: var(--space);
-      }
-      
-      .page__select__search__price {
-          padding-left: var(--space90);
-          padding-bottom: var(--space);
-      }
-      
-      .page__select h5 {
-          font-size: x-large;
-          text-align: center;
-          padding-bottom: var(--space);
-      }
-      
-      #search_place {
-          min-width: 150px;
-          height: 50px;
-          outline-style: none;
-          border: none;
-          padding: 0 25px;
-          border-radius: 25px 0 0 25px;
-      }
-      
-      #sub_search_place {
-          border-radius: 0 25px 25px 0;
-          min-width: 150px;
-          height: 50px;
-          outline-style: none;
-          border: none;
-          padding-left: 0%;
-          margin-left: 0%;
-          background: linear-gradient(0, #b25fc7, #f7c65d);
-          color: white;
-      }
-      
-      #book_datefrom {
-          min-width: 170px;
-          height: 50px;
-          outline-style: none;
-          border: none;
-          padding: 0 25px;
-          border-radius: 25px 0 0 25px;
-          padding-left: 0%;
-          margin-left: 0%;
-      }
-      
-      #book_dateto {
-          min-width: 170px;
-          height: 50px;
-          outline-style: none;
-          border: none;
-          padding: 0 25px;
-          border-radius: 0 25px 25px 0;
-          padding-left: 0%;
-          margin-left: 0%;
-      }
-      
-      #pricefrom {
-          min-width: 170px;
-          height: 50px;
-          outline-style: none;
-          border: none;
-          padding: 0 25px;
-          border-radius: 25px 0 0 25px;
-          padding-left: 0%;
-          margin-left: 0%;
-      }
-      
-      #priceto {
-          min-width: 170px;
-          height: 50px;
-          outline-style: none;
-          border: none;
-          padding: 0 25px;
-          border-radius: 0 25px 25px 0;
-          padding-left: 0%;
-          margin-left: 0%;
-      }
-      
-      .page__content--information {
-          display: flex;
-          flex-wrap: wrap;
-          justify-content: space-around;
-          margin-bottom: var(--space);
-      }
-      
-      .information--right img {
-          width: 100%;
-      }
-      
-      .book_page .information--left {
-          background-color: rgb(238, 247, 248);
-          min-width: 300px;
-          flex: 1;
-          padding-top: var(--space);
-          padding-bottom: var(--space);
-          border: 2px dashed var(--mainColor);
-      }
-      
-      .book_page .page__content {
-          padding-top: var(--space250);
-      }
-      
-      .information--left .flex_row {
-          padding: 8px 5px;
-          display: flex;
-          text-align: left;
-      }
-      
-      .information--left .flex-label {
-          display: inline-block;
-          width: 500px;
-      }
-      
-      .information--left .flex-input {
-          width: 300%;
-          outline-style: none;
-          border: none;
-      }
-      
-      .information--left #note {
-          height: 100px;
-      }
-      
-      .book_page .information--right {
-          min-width: 300px;
-          flex: 1;
-          border: 2px dashed var(--mainColor);
-      }
-      
-      .page__content--book .flex_row {
-          padding: 8px 5px;
-          display: flex;
-          text-align: left;
-      }
-      
-      .page__content--book .flex_row label {
-          display: inline-block;
-          width: 200px;
-      }
-      
-      .page__content--book .flex-input {
-          width: 200px;
-          outline-style: none;
-          border: none;
-      }
-      
-      #number_book {
-          width: 40px;
-          padding-right: 10px;
-          text-align: center;
-      }
-      
-      #place_book {
-          width: 140px;
-          padding-right: 10px;
-          text-align: right;
-      }
-      
-      .page__content--book .btn {
-          margin-top: var(--space);
-      }
+     .book_page {
+        margin: 0;
+        padding: 0;
+    }
+    
+    .img_slidego img {
+        width: 100%;
+        height: 100%;
+        position: relative;
+        z-index: 1;
+    }
+    
+  
+    .page__content--information {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        margin-bottom: var(--space);
+        color: white;
+    }
+    
+    .information--right img {
+        width: 100%;
+    }
+    
+    .book_page .information--left {
+        background-color: rgb(87, 165, 177);
+        min-width: 300px;
+        flex: 1;
+        padding-top: var(--space);
+       margin-top: var(--space);
+       margin-right: var(--space);;
+        
+    }
+    
+    .information--left .flex_row {
+        padding: 8px 5px;
+        display: flex;
+        text-align: left;
+    }
+    
+    .information--left .flex-label {
+        display: inline-block;
+        width: 500px;
+    }
+    
+    .information--left .flex-input {
+        width: 300%;
+        outline-style: none;
+        border: none;
+        margin-right: 20px;
+    }
+    
+    .information--left #note {
+        height: 100px;
+    }
+    
+    .book_page .information--right {
+        min-width: 300px;
+        flex: 1;
+        margin-top: var(--space);
+    }
+    .book_page .page__content--book {
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+        min-width: 300px;
+        background-color: rgb(87, 165, 177);
+        color: white;
+    }
+    .page__content--book .flex_row {
+      padding : 8px 5px;
+      display: flex;
+      text-align: left;
+      flex: 1;
+    }
+    
+    .page__content--book .flex_row label {
+        display: inline-block;
+        width: 200px;
+    }
+    
+    .page__content--book .flex-input {
+        width: 200px;
+        outline-style: none;
+        border: none;
+    }
+    
+    .page__content--book #number_book {
+        width: 45px;
+        text-align: left;
+    }
+    
+    .page__content--book #place_book {
+        width: 150px;
+        text-align: left;
+    }
+    
+    .page__content--book .btn_book_done {
+        background-image: linear-gradient(0, #f29134, #f7c65d);
+         color: white;
+         border-radius: 5px;
+         text-align: center;
+         font-weight: bold;
+         width: 200px;
+         height: 30px;
+         margin-top: var(--space);
+         margin-left: auto;
+        margin-right: auto;
+        display: block;
+    }
+
+
       /*PAGE about us*/
       
       .aboutus_page .page__content {
