Cap nhat main.js, sua file register, signin, css

--- a/CSS/footer-menu.css
+++ b/CSS/footer-menu.css
@@ -332,6 +332,9 @@
     .page__menu--icon {
         display: none;
     }
+    #button__signout{
+        display: none;
+    }
     #page__partner {
         display: none;
     }
