--- a/CSS/footer-menu.css
+++ b/CSS/footer-menu.css
@@ -6,27 +6,27 @@
 }
 
 .page {
-    /* background-color: #e6f5f9; */
     background-color: #cae0f3;
 }
 
  :root {
-    /* --textColor: #f1bf2f; */
     --textColor: rgb(236, 238, 247);
     --menuColor: #04074c;
-    /* --menuColor: #144496; */
     --linkColor: #b5d4d2;
     --footerColor: #04074c;
-    /* --footerColor: #44a1cf; */
     --mainColor: rgb(4, 20, 112);
+    --aHover: hsl(190deg 98% 52%);
+    --btnhover: hsl(211deg 91% 32%);
     --space: 30px;
     --infColor: #f3fbfd;
-    --menuRight: rgba(110, 102, 102, 0.9);
+    --menuRight: rgba(220, 243, 250, 0.9);
     --space90: 90px;
     --space350: 350px;
     --space250: 250px;
     --space150: 150px;
     --space200: 200px;
+    --btnColor1: #f29134;
+    --btnColor2: #f7c65d;
 }
 
 .text-center {
@@ -43,23 +43,35 @@
     justify-content: space-around;
 }
 
+.validation_message {
+    font-size: small;
+    margin-left: var(--space);
+}
+
 
 /*dung chung*/
-
-.page a:hover {
-    color: rgb(46, 27, 2);
-    text-decoration: underline;
-}
 
 .btn {
     margin: 0 auto;
     background-image: linear-gradient(0, #f29134, #f7c65d);
-    /* background-image: linear-gradient(0, #b25fc7, #f7c65d); */
     border-radius: 10px;
     text-align: center;
     font-weight: bold;
     width: 100px;
     height: 36px;
+}
+
+ul a:hover,
+a:hover {
+    color: var(--aHover);
+}
+
+.btn>a {
+    color: var(--mainColor)
+}
+
+.btn a:hover {
+    color: var(--btnhover)
 }
 
 .btn-medium {
@@ -81,8 +93,6 @@
     height: 30px;
     width: 60px;
     color: #044d98;
-    /* color: white; */
-    /* background-color: violet; */
     background-color: #0dd4fd;
     border-radius: 5px;
 }
@@ -173,6 +183,11 @@
     list-style: none;
     display: flex;
     text-transform: uppercase;
+    justify-content: space-around;
+}
+
+.page__menu--ul {
+    width: 500px;
 }
 
 .page__menu li {
@@ -190,20 +205,6 @@
 }
 
 .page__menu--icon-menu {
-    display: none;
-}
-
-
-/*phần chỉnh logo partner*/
-
-#page__partner img {
-    display: block;
-    padding-left: 10px;
-    width: 55px;
-    height: 100%;
-}
-
-#page__partner--slide {
     display: none;
 }
 
@@ -253,10 +254,12 @@
     display: flex;
 }
 
-.footer--right--menu ul li a {
-    text-decoration: underline;
-    color: var(--linkColor);
-    font-style: italic;
+.footer--right--menu ul a {
+    color: white;
+}
+
+.footer--right--menu ul a:hover {
+    color: var(--aHover);
 }
 
 .footer--information {
@@ -317,6 +320,103 @@
 }
 
 
+/*slide*/
+
+* {
+    box-sizing: border-box;
+}
+
+body {
+    font-family: Verdana, sans-serif;
+}
+
+.mySlides {
+    display: none;
+}
+
+img {
+    vertical-align: middle;
+}
+
+
+/* Slideshow container */
+
+.slideshow-container {
+    max-width: 900px;
+    position: relative;
+    margin: auto;
+}
+
+
+/* Caption text */
+
+.text {
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+}
+
+
+/* Number text (1/3 etc) */
+
+.numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+}
+
+
+/* The dots/bullets/indicators */
+
+.dot {
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.8s linear;
+}
+
+.active {
+    background-color: #717171;
+}
+
+
+/* Fading animation */
+
+.fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 3.0s;
+    animation-name: fade;
+    animation-duration: 3.0s;
+}
+
+@-webkit-keyframes fade {
+    from {
+        opacity: .4
+    }
+    to {
+        opacity: 1
+    }
+}
+
+@keyframes fade {
+    from {
+        opacity: .4
+    }
+    to {
+        opacity: 1
+    }
+}
+
+
 /* On smaller screens, decrease text size */
 
 @media only screen and (max-width: 300px) {
@@ -329,28 +429,18 @@
 /*máy tính bảng loại to, hiện thị chiều ngang*/
 
 @media screen and (max-width:1024px) {
-    .page__menu--icon {
+    #button__signout {
         display: none;
     }
-    #button__signout{
-        display: none;
-    }
-    #page__partner {
-        display: none;
-    }
-    #page__partner--slide {
-        display: block;
+    .page__menu--ul {
+        width: 400px;
     }
 }
 
 
 /*máy tính bảng, hiện thị chiều ngang*/
 
-@media screen and (max-width: 800px) {
-    .page__menu--icon {
-        display: none;
-    }
-}
+@media screen and (max-width: 800px) {}
 
 
 /*máy tính bảng loại to, hiện thị chiều dọc*/
@@ -361,9 +451,13 @@
     }
     .page__menu--icon-menu {
         display: block;
+        position: absolute;
+        right: 10px;
+    }
+    .page__menu--ul {
+        width: 1px;
     }
     #page__footer {
-        /* background-color: rgb(17, 0, 255); */
         font-size: 15px;
     }
     .page__footer--left {
@@ -381,12 +475,14 @@
 
 @media screen and (max-width: 600px) {
     #page__footer {
-        /* background-color: rgb(0, 217, 255); */
         width: 100%;
         padding-top: 5px;
     }
     .page__footer--right {
         min-width: 400px;
+    }
+    .title {
+        font-size: 15px;
     }
 }
 
@@ -395,7 +491,6 @@
 
 @media screen and (max-width: 480px) {
     #page__footer {
-        /* background-color: rgb(130, 133, 130); */
         font-size: 12px;
         width: 100%;
     }
@@ -405,17 +500,10 @@
     .page__footer--right {
         min-width: 280px;
     }
-    .page__partner img {
-        height: 20px;
-        padding-left: 5px;
-        padding-right: 5px;
-    }
-    .partners-logo {
-        min-width: 280px;
-    }
-    .input-search,
-    .fa-search {
+    .btn-register,
+    .btn-signin {
         display: none;
+        width: 1px;
     }
 }
 
@@ -446,9 +534,6 @@
     .tour--item p {
         padding-left: 5px;
         padding-right: 5px;
-    }
-    .page__partner img {
-        max-width: 50px;
     }
     .footer--right--menu {
         margin-left: 0px;
