--- a/CSS/standard.css
+++ b/CSS/standard.css
@@ -19,12 +19,7 @@
     --btnhover: hsl(211deg 91% 32%);
     --space: 30px;
     --infColor: #f3fbfd;
-    --menuRight: rgba(220, 243, 250, 0.9);
-    --space90: 90px;
-    --space350: 350px;
-    --space250: 250px;
-    --space150: 150px;
-    --space200: 200px;
+    --menuRight: hsl(211deg 91% 32%);
     --btnColor1: #f29134;
     --btnColor2: #f7c65d;
 }
@@ -48,17 +43,43 @@
     margin-left: var(--space);
 }
 
-
 /*dung chung*/
-
 .btn {
     margin: 0 auto;
     background-image: linear-gradient(0, #f29134, #f7c65d);
-    border-radius: 10px;
+    border-radius: 5px;
     text-align: center;
     font-weight: bold;
     width: 100px;
     height: 36px;
+    line-height: 36px;
+    color: white;
+    font-size: 20px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+p {
+    text-align: justify
+}
+
+.btn a {
+    text-decoration: none;
+    line-height: 36px;
+    padding: 0px;
+}
+
+.title_upperCase {
+    font-size: 30px;
+    text-transform: uppercase;
+    text-align: center;
+    margin-top: var(--space);
+    margin-bottom: var(--space);
+    color: #044d98;
+}
+
+.color {
+    color: #044d98;
 }
 
 ul a:hover,
@@ -74,15 +95,16 @@ a:hover {
     color: var(--btnhover)
 }
 
+.btn:hover {
+    background-image: linear-gradient(0, #f29134, #f29134);
+}
+
 .btn-medium {
     width: 150px;
-    height: 36px;
 }
 
 .btn-lager {
     width: 250px;
-    height: 36px;
-    line-height: 36px;
 }
 
 .price {
@@ -97,9 +119,7 @@ a:hover {
     border-radius: 5px;
 }
 
-
 /*phần chỉnh div lớn nhất*/
-
 .page {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     position: relative;
@@ -107,9 +127,7 @@ a:hover {
     font-size: 20px;
 }
 
-
 /*phần chỉnh nội dung website*/
-
 .page__content {
     max-width: 1230px;
     margin: 0 auto;
@@ -122,9 +140,7 @@ a:hover {
     margin-bottom: var(--space);
 }
 
-
 /*menu ẩn hiện*/
-
 #page__menu--right {
     margin-top: 50px;
     margin-right: 10px;
@@ -158,12 +174,9 @@ a:hover {
     color: var(--textColor);
 }
 
-
 /*-----------------------*/
 
-
 /*phần chỉnh menu*/
-
 .page__menu {
     position: relative;
     width: 100%;
@@ -208,9 +221,7 @@ a:hover {
     display: none;
 }
 
-
 /*phần chỉnh footer*/
-
 #page__footer {
     width: 100%;
     background-color: var(--footerColor);
@@ -240,12 +251,20 @@ a:hover {
     padding-right: 10px;
 }
 
+.footer--right--menu {
+    display: flex;
+}
+
 .footer--right--menu li {
-    flex: 1;
+    margin-left: var(--space);
+}
+
+.footer--right--menu a {
+    text-decoration: none;
 }
 
 .footer--right--menu li:first-child {
-    margin-left: var(--space);
+    margin-left: 10px;
 }
 
 .footer--right--menu ul {
@@ -287,200 +306,87 @@ a:hover {
     text-decoration: none;
 }
 
-
-/*Slide*/
-
-
-/* Slideshow container */
-
-.slide_page #slideshow-container {
-    max-width: 600px;
-    position: relative;
-    margin: auto;
-}
-
-.slide_page .mySlides {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    flex: 1;
-}
-
-.home_page #slideshow-container {
-    max-width: 100vw;
-    position: relative;
-    margin: auto;
-}
-
-.home_page .mySlides {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    flex: 1;
-}
-
-
-/*slide*/
-
-* {
-    box-sizing: border-box;
-}
-
-body {
-    font-family: Verdana, sans-serif;
-}
-
-.mySlides {
-    display: none;
-}
-
-img {
-    vertical-align: middle;
-}
-
-
-/* Slideshow container */
-
-.slideshow-container {
-    max-width: 900px;
-    position: relative;
-    margin: auto;
-}
-
-
-/* Caption text */
-
-.text {
-    color: #f2f2f2;
-    font-size: 15px;
-    padding: 8px 12px;
-    position: absolute;
-    bottom: 8px;
-    width: 100%;
-    text-align: center;
-}
-
-
-/* Number text (1/3 etc) */
-
-.numbertext {
-    color: #f2f2f2;
-    font-size: 12px;
-    padding: 8px 12px;
-    position: absolute;
-    top: 0;
-}
-
-
-/* The dots/bullets/indicators */
-
-.dot {
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.8s linear;
-}
-
-.active {
-    background-color: #717171;
-}
-
-
-/* Fading animation */
-
-.fade {
-    -webkit-animation-name: fade;
-    -webkit-animation-duration: 3.0s;
-    animation-name: fade;
-    animation-duration: 3.0s;
-}
-
-@-webkit-keyframes fade {
-    from {
-        opacity: .4
-    }
-    to {
-        opacity: 1
-    }
-}
-
-@keyframes fade {
-    from {
-        opacity: .4
-    }
-    to {
-        opacity: 1
-    }
-}
-
-
-/* On smaller screens, decrease text size */
-
-@media only screen and (max-width: 300px) {
-    .text {
-        font-size: 11px
-    }
-}
-
-
 /*máy tính bảng loại to, hiện thị chiều ngang*/
-
 @media screen and (max-width:1024px) {
     #button__signout {
         display: none;
     }
+
     .page__menu--ul {
         width: 400px;
     }
 }
 
 
-/*máy tính bảng, hiện thị chiều ngang*/
-
-@media screen and (max-width: 800px) {}
-
-
 /*máy tính bảng loại to, hiện thị chiều dọc*/
-
 @media screen and (max-width: 768px) {
+    /*dung chung*/
+    .btn {
+        width: 100px;
+        height: 32px;
+        line-height: 32px;
+        font-size: 18px;
+    }
+
+    .btn-medium {
+        width: 130px;
+    }
+
+    .btn-lager {
+        width: 220px;
+    }
+    
     .page__menu ul {
         display: none;
     }
+
     .page__menu--icon-menu {
         display: block;
         position: absolute;
         right: 10px;
     }
+    .btn__signin_emai--submenu{
+        display: none;
+    }
+
+    .btn__register--submenu{
+        display: none;
+    }
+
     .page__menu--ul {
         width: 1px;
     }
+
     #page__footer {
         font-size: 15px;
     }
+
     .page__footer--left {
         width: 100%;
         margin-left: auto;
         margin-right: auto;
     }
+
     .tour--item {
         height: auto;
     }
+
+    .footer--right--menu li {
+        margin-left: 15px;
+    }
 }
 
-
 /*máy tính bảng, hiện thị chiều dọc*/
-
 @media screen and (max-width: 600px) {
     #page__footer {
         width: 100%;
         padding-top: 5px;
     }
+
     .page__footer--right {
         min-width: 400px;
     }
+
     .title {
         font-size: 15px;
     }
@@ -488,18 +394,20 @@ img {
 
 
 /*điện thoại, hiện thị chiều ngang*/
-
 @media screen and (max-width: 480px) {
     #page__footer {
         font-size: 12px;
         width: 100%;
     }
+
     .page__footer--left img {
         width: 100%;
     }
+
     .page__footer--right {
         min-width: 280px;
     }
+
     .btn-register,
     .btn-signin {
         display: none;
@@ -509,38 +417,66 @@ img {
 
 
 /*điện thoại, hiện thị chiều dọc*/
-
 @media screen and (max-width: 320px) {
+    /*dung chung*/
+    .btn {
+        width: 100px;
+        height: 30px;
+        line-height: 30px;
+        font-size: 15px;
+    }
+
+    .btn-medium {
+        width: 120px;
+    }
+
+    .btn-lager {
+        width: 200px;
+    }
+    /**/
     #page__footer {
         width: 100%;
     }
+
     .page__footer--left img {
         width: 60%;
     }
+
     .page__footer--right {
         min-width: 200px;
     }
+
     .page__footer--right .btn-search {
         display: block;
     }
+
     .footer--right--menu {
         width: 10px;
     }
+
+    .footer--right--menu li {
+        margin-left: 10px;
+    }
+
     .tour--item {
         width: 100%;
         height: auto;
         border: none;
     }
+
     .tour--item p {
         padding-left: 5px;
         padding-right: 5px;
     }
+
     .footer--right--menu {
         margin-left: 0px;
     }
+
     .footer--right--menu ul li a {
         margin-left: 10px;
     }
+    
     /*partner*/
     #slideshow-container .mySlides img {
         width: 55px;
